# iris

./: .gitignore  Cargo.toml  README.md  cli.zig  go.mod  log.zig  main.go  main.zig  util.rs
cmd/: config.go  help.go  install.go  reinstall.go  resume.go  root.go  uninstall.go
components/: install.zig
pkg/: pkg.go
src/: cli.rs  main.rs  util.rs
src/components/: install.rs
