[package]
name = "iris"
authors = ["Atiksh Sharma <rudy@system-linux.com"]
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
colored = "2.1.0"
crossterm = "0.28.1"
flate2 = "1.0.33"
indicatif = "0.17.8"
lazy_static = "1.5.0"
reqwest = { version ="0.12.7", features = ["blocking"]}
structopt = "0.3.26"
tar = "0.4.41"
xz2 = "0.1.7"
